Add test for sbi_debug_console_read

--- a/tests/makefile
+++ b/tests/makefile
@@ -32,3 +32,7 @@ distclean: clean
 test: test.elf
 	qemu-system-riscv64 -kernel test.elf -machine virt	\
 			    -nographic
+
+debug: test.elf
+	qemu-system-riscv64 -kernel test.elf -machine virt	\
+			    -nographic -S -s
