Refact the structure of test kernel

--- a/tests/makefile
+++ b/tests/makefile
@@ -9,11 +9,11 @@ CC		:= $(CROSS_COMPILE)gcc
 LD		:= $(CROSS_COMPILE)ld
 
 CFLAGS		:= -march=rv64gc -mabi=lp64d -g -O0 -pedantic -Wextra	\
-		   -nostdinc -nostdlib -mcmodel=medany -Wall -std=gnu99
+		   -nostdlib -mcmodel=medany -Wall -std=gnu99
 CCASFLAGS	:= $(CFLAGS)
 LDFLAGS		:= -T link.ld
 
-OBJS		:= start.o main.o sbi.o
+OBJS		:= start.o main.o sbi.o test_console.o
 
 default: test.elf
 
