--- a/tests/makefile
+++ b/tests/makefile
@@ -13,7 +13,7 @@ CFLAGS		:= -march=rv64gc -mabi=lp64d -g -O0 -pedantic -Wextra	\
 CCASFLAGS	:= $(CFLAGS)
 LDFLAGS		:= -T link.ld
 
-OBJS		:= start.o main.o sbi.o printf.o	\
+OBJS		:= start.o main.o sbi.o printf.o tests.o	\
 		   test_console.o test_base.o
 
 default: test.elf
