Emulate rdtime instruction in the firmware

--- a/src/makefile
+++ b/src/makefile
@@ -1,1 +1,2 @@
-objs	+= main.o log.o exception.o console.o base_extension.o
+objs	+= main.o log.o exception.o emulation.o	\
+	   console.o base_extension.o
